--- a/public/css/main.css
+++ b/public/css/main.css
@@ -490,11 +490,11 @@ button {
   flex-shrink: 0;
 }
 
-.films-list--extra:last-of-type {
+.films-list--extra {
   position: relative;
 }
 
-.films-list--extra:last-of-type::before {
+.films-list--extra:nth-child(2n + 1)::before {
   border-left: solid 1px var(--outline-color);
   bottom: 20px;
   content: '';
@@ -666,7 +666,10 @@ button {
   font-weight: 600;
 }
 .film-details__genre {
-  padding-right: 15px;
+  padding-left: 15px;
+}
+.film-details__genre:first-child {
+  padding-left: 0;
 }
 .film-details__table {
   margin-bottom: 37px;
